--- a/course_list/templates/course/python.html
+++ b/course_list/templates/course/python.html
@@ -3,10 +3,12 @@
 {% block content %}
     {% if courses %}
         {% for course in courses %}
-            <h2 class="text-xl p-4 border-2 m-2 shadow-xl "> {{ course.title }}</h2>
-            <p>{{ course.description }}</p>
-            <p>Category: {{ course.category }}</p>
-            <p>Created At: {{ course.created_at }}</p>
+            <div class="dark:text-white shadow-xl">
+                <h2 class="text-xl p-4 border-2 m-2 shadow-xl "> {{ course.title }}</h2>
+                <p>{{ course.description }}</p>
+                <p>Category: {{ course.category }}</p>
+                <p>Created At: {{ course.created_at }}</p>
+            </div>
             <hr>
         {% endfor %}
     {% else %}
